# Tentemat7777

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
app/: __init__.py
app/api/: __init__.py  main.py
app/config/: settings.py  sources.yaml
app/fetchers/: __init__.py  engine.py  event_fetcher.py  macro_fetcher.py  market_fetcher.py  news_fetcher.py
app/monitoring/: healthcheck.py
app/normalizers/: __init__.py  base.py  event_normalizer.py  factory.py  macro_normalizer.py  market_normalizer.py  news_normalizer.py
app/scheduler/: jobs.py
app/scoring/: confirmation.py  novelty.py  scorer.py  summarizer.py
app/sources/: base.py  factory.py  fred.py  gdelt.py  polymarket.py  registry.py  rss.py  sec_edgar.py
app/storage/: models.py  postgres.py  redis_cache.py
app/utils/: hashing.py
tests/: conftest.py  test_api.py  test_connectors.py  test_engine.py  test_gdelt.py
